--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 				<h2 class="random-info-title">Some random info</h2>
 				<div class="card-container">
 					<div class="card">
-						<img src="./images/dog-and-duck.jpg" alt="">
+						<img src="./images/dog-and-duck.jpg" alt="Dog and Duck">
 						<p>This is some subtext under an illustration or image</p>
 					</div>
 					<div class="card">
-						<img src="./images/ez-bunny.jpg" alt="">
+						<img src="./images/ez-bunny.jpg" alt="EZ Bunny image">
 						<p>This is some subtext under an illustration or image</p>
 					</div>
 					<div class="card">
-					<img src="./images//surprised-cat.jpg" alt="">
+					<img src="./images//surprised-cat.jpg" alt="Cute surprised cat">
 					<p>This is some subtext under an illustration or image</p>
 				</div>
 				<div class="card">
-					<img src="./images/happy-doggo.jpg" alt="">
+					<img src="./images/happy-doggo.jpg" alt="Happy dogo">
 					<p>This is some subtext under an illustration or image</p>
 				</div>
 			</div>
